--- a/index.html
+++ b/index.html
@@ -11,8 +11,35 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Js developer</h1>
-    <h2>Hi world</h2>
+    <!-- container  -->
+    <div class="quote-container" id="quote-container">
+        <!-- quote text  -->
+        <div class="quote-text" id="quote-text">
+            <i class="fa-solid fa-quote-left"></i>
+            <span class="quote">
+               
+            </span>
+
+            <!-- quote author  -->
+            <div class="quote-author">
+                <div class="author">
+                   
+                </div>
+            </div>
+
+            <!-- share button  -->
+            <div class="buttonContainer">
+                <button class="twitter-btn btn">
+                    <i class="fa-brands fa-twitter"></i>
+                </button>
+                <button class="newQuoteBtn btn">
+                    New Quote
+                </button>
+            </div>
+        </div>
+    </div>
+    <div class="loader" ></div>
+
     <script src="script.js"></script>
 </body>
 
